<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nnenna.androidnetwork.activities.Registration">

    <EditText
        android:id="@+id/etFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_margin="8dp"/>
    <EditText
        android:id="@+id/etLast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_margin="8dp"/>
    <EditText
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_margin="8dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_margin="8dp"/>
    <EditText
        android:id="@+id/etPhone"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_margin="8dp"/>
    <Spinner
        android:id="@+id/spGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Gender">
    </Spinner>


    <Button
        android:id="@+id/btnRegister1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center"/>

</LinearLayout>
